Fixed alignament for nav content

--- a/day1/css/header.css
+++ b/day1/css/header.css
@@ -28,12 +28,14 @@ header nav{
 
 }
 
-nav #company-logo{
+nav div.company-logo{
+	height:50px;
 	display: inline;
     align: center;
     left: 50%;
     transform: translate(-50%,0%);
-    margin-top: 20px;
+    /*margin-top: 20px;*/
+    content: url("../assets/endava.jpg");
 }
 
 #test{
